--- a/backend/package.json
+++ b/backend/package.json
@@ -16,12 +16,13 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.5.0",
+    "axios": "^1.10.0",
     "cors": "^2.8.5",
-    "helmet": "^7.0.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^6.10.0",
-    "dotenv": "^16.3.1"
+    "helmet": "^7.0.0",
+    "mongoose": "^7.5.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
